--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^2.16.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.15",
+    "graphql-upload": "^11.0.0",
     "listr": "^0.14.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
