--- a/package.json
+++ b/package.json
@@ -76,5 +76,9 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
   }
 }
