--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^7.1.0",
     "apollo-server-express": "^2.16.1",
+    "cloudinary": "^1.23.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.15",
     "graphql-upload": "^11.0.0",
