--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.6.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/serve-static": "^2.1.3",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^7.1.0",
     "apollo-server-express": "^2.16.1",
     "cloudinary": "^1.23.0",
@@ -35,7 +35,7 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.0.15",
     "graphql-upload": "^11.0.0",
-    "listr": "^0.14.3",
+    "listr": "^0.14.2",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,7 +44,7 @@
     "uuidv4": "^6.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
+    "@nestjs/cli": "^6.2.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
@@ -53,13 +53,13 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
+    "jest": "^27.2.5",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
