--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql-upload": "^12.0.0",
     "listr": "^0.14.3",
     "pg": "^8.7.1",
+    "pg-pool": "^3.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
